<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.maris.about_me.MainActivity"
    android:background="#04B404">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/foto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/andrea_ben_tez"
        android:layout_below="@id/foto"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"/>

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingenier_a_inform_tica"
        android:layout_below="@id/text"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"/>

    <LinearLayout
        android:id="@+id/LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:src="@drawable/fb"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/andrea_ben_tez"
            android:textSize="20dp"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/github" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/marybenitez"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/cel"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:id="@+id/text5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/_7795_1321"
            android:textSize="20dp"/>

        <ImageView
            android:id="@+id/gmail"
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:src="@drawable/email" />

        <TextView
            android:id="@+id/text6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/_00094716_uca_edu_sv"
            android:layout_marginRight="10dp"
            android:textSize="20dp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/power_by_andrea_ben_tez"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>



</RelativeLayout>
